# cde2310_g4

./: GUI_OVERLAY.py  README.md  aruco_detection_launchfile.py  camult.py  electrical_document  one.sh  package.xml  setup.py
SOFTWARE_DOCUMENTATION/pc_code/: setup.cfg
SOFTWARE_DOCUMENTATION/pc_code/cde2310_g4_ay2526/: coordinator.py  frontier_detection.py
SOFTWARE_DOCUMENTATION/pc_code/nav2_params/: burger.yaml
SOFTWARE_DOCUMENTATION/rpi_code/: payload.py
camera_calibration_files/: 640480left.yaml  640480right.yaml  cam_left.yaml  cam_right.yaml
camera_launch_files/: aruco_detection_launchfile.py  camera_frame_baselink_launchfile.py  camfile.py
cde2310_g4_ay2526/: coordinator.py  frontier_detection.py  main.py
config/: turtlebot3_lds_2d.lua
docs/: Con_Ops.md  Requirement_Specifications.md  Software_Firmware_Development_Documentation.md  Testing_Documentations.md
electrical_doc/: electrical subsystem  electrical subsystem.md  electrical_subsystem.md
images/: amimir  group photo
launch/: custom_maze.launch.py  mission.launch.py
mech_doc/: CG.xlsx  README.md  readme
mech_doc/3D Printing/: readme.md
models/custom_maze/: model.config
nav2_params/: burger.yaml  burger_primitive.json
pc_code/: GUI_OVERLAY.py
pc_code/launch/: mission.launch.py
ros2_aruco/: requirements.txt
rpi_code/cde2310_g4_camera/: aruframe.py  camfile.py
rviz/: tb3_cartographer.rviz
software_doc/pc_code/: README.md  setup.py
software_doc/rpi_code/: README.md  aruco_detection_launchfile.py  cam_launch.py  camult.py  one.sh
worlds/: custom_maze_CDE2310_old.sdf
(+358 files in other folders)
